[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Backgrounds/Gradient.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Music/TitleScreen.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/SceneScripts/Presentation/Title/TitleMain.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/UISelect.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "TitleFadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" parent="." instance=ExtResource( 1 )]

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -184.0
margin_right = 217.0
margin_bottom = -18.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 75.0
margin_right = 80.0
margin_bottom = 95.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UISelect" type="AudioStreamPlayer" parent="Button"]
stream = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/TitleFadeOut = SubResource( 3 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
